WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
26815
[Gtk] text-selection-changed events are not issued for the correct object when the selection spans multiple objects
https://bugs.webkit.org/show_bug.cgi?id=26815
Summary
[Gtk] text-selection-changed events are not issued for the correct object whe...
Joanmarie Diggs
Reported
2009-06-29 14:11:47 PDT
(This is a spin-off bug from
bug #25526 comment #15
) Steps to reproduce: 1. Launch Epiphany and Accerciser. 2. Having enabled Accerciser's event monitor to examine object:text-selection-changed events, use Shift+Right to select forward by character. Expected results: The source of the event would be the accessible object in which text was just selected. Actual results: The source of the event is the accessible object in which text selection began -- which is not necessarily the object in which the most recent text selection took place. For instance, given: This <a href="foo.html">is</a> a test. If I start selection somewhere in "This" and Shift+Right through to "test," I see a text-selection-changed event for each press of Shift+Right, but all of them are for the accessible which contains "This" rather than the link and subsequent text.
Attachments
textselection.patch
(2.43 KB, patch)
2009-07-02 00:46 PDT
,
Xan Lopez
jmalonzo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-07-02 00:46:18 PDT
Created
attachment 32171
[details]
textselection.patch Get the focused node from the selection end.
Jan Alonzo
Comment 2
2009-07-03 05:42:45 PDT
Comment on
attachment 32171
[details]
textselection.patch r=me.
Xan Lopez
Comment 3
2009-07-03 07:10:43 PDT
Landed as
r45534
.
Joanmarie Diggs
Comment 4
2009-07-03 21:19:48 PDT
Verifying. Thanks Xan!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug