WebCore/editing/gtk/SelectionControllerGtk.cpp
@@ -30,7 +30,7 @@ namespace WebCore {
 void SelectionController::notifyAccessibilityForSelectionChange()
 {
     if (AXObjectCache::accessibilityEnabled() && m_sel.start().isNotNull() && m_sel.end().isNotNull()) {
-        RenderObject* focusedNode = m_sel.start().node()->renderer();
+        RenderObject* focusedNode = m_sel.end().node()->renderer();
         AccessibilityObject* accessibilityObject = m_frame->document()->axObjectCache()->getOrCreate(focusedNode);
         AtkObject* wrapper = accessibilityObject->wrapper();
         if (ATK_IS_TEXT(wrapper)) {
